checkin various web fix

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Table2JsonMvc/obj
 /GoodIdea
 /Millionaire/.vs/Millionaire
 /NumberPrediction/NumberPrediction/obj
+/NumberPrediction/NumberPrediction/bin
