--- a/Generateur/Properties/launchSettings.json
+++ b/Generateur/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Generateur": {
       "commandName": "Project",
-      "commandLineArgs": "-d -m"
+      "commandLineArgs": "-d -w"
     }
   }
 }
