--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,10 @@ Table2JsonMvc/obj
 /Millionaire/.vs/Millionaire
 /NumberPrediction/NumberPrediction/obj
 /NumberPrediction/NumberPrediction/bin
+/NumberPrediction/NumberPrediction/*.csproj.user
 /.vs/Millionaire/v16
-/Millionaire/CoreProject/bin/Debug/netstandard2.0
-/Millionaire/CoreProject/obj/Release/netstandard2.0/CoreProject.assets.cache
-/Millionaire/CoreProject/obj/Release/netstandard2.0/CoreProject.AssemblyInfoInputs.cache
-/Millionaire/CoreProject/obj/CoreProject.csproj.nuget.cache
+/Millionaire/CoreProject/bin/**
+/Millionaire/CoreProject/obj/**
+/Millionaire/CoreProject/*.csproj.user
+/Millionaire/.vs/*
+/Generateur/Generateur.csproj.user
